Реализовать основной сервис